# dotfm

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: PRD.jp.md  PRD.md  README.jp.md
src/: cli.rs  config.rs  error.rs  lib.rs  link.rs  main.rs  os.rs  registry.rs  style.rs
src/commands/: add.rs  apply.rs  diff.rs  doctor.rs  init.rs  list.rs  mod.rs  remove.rs  status.rs  util.rs
tests/: integration.rs
