[package]
name = "dotfm"
version = "0.0.6"
edition = "2024"
rust-version = "1.85"
authors = ["ShortArrow <bamboogeneral@shortarrow.jp>"]
description = "A declarative, symlink-based dotfiles manager for humans who think in tools, not files."
readme = "README.md"
homepage = "https://github.com/ShortArrow/dotfm"
repository = "https://github.com/ShortArrow/dotfm"
documentation = "https://docs.rs/dotfm"
license = "MIT OR Apache-2.0"
keywords = ["dotfiles", "symlink", "cli", "config"]
categories = ["command-line-utilities", "config"]
exclude = [
  "/.github/",
  "/docs/",
  "/tests/fixtures/",
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
similar = "2"
thiserror = "1"
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
